<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context="com.alvindev.aplikasibelajaruts.gameplay.SalahFragment"
    tools:ignore="Overdraw"
    tools:keep="@layout/fragment_salah">

    <TextView
        android:id="@+id/txtSalah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/gameria"
        android:text="@string/wrong_alert"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/descJawaban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSalah"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gameria"
        android:text="@string/the_correct_answer_is"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/jawaban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descJawaban"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gameria"
        android:text="@string/answer_placeholder"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnLanjut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/jawaban"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/gameria"
        android:text="@string/next"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLanjut"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/gameria"
        android:text="@string/home"
        android:textColor="@color/white" />

</RelativeLayout>