<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context="com.alvindev.aplikasibelajaruts.gameplay.BenarFragment"
    tools:ignore="Overdraw"
    tools:keep="@layout/fragment_benar">

    <TextView
        android:id="@+id/txtBenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/gameria"
        android:text="@string/correct"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnLanjut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBenar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/gameria"
        android:text="@string/next"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLanjut"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/gameria"
        android:text="@string/home"
        android:textColor="@color/white" />

</RelativeLayout>